--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",    
+    "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
@@ -14,14 +14,17 @@
     "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "date-fns": "^3.6.0",
     "react": "18.2.0",
     "react-native": "^0.73.8",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-paper": "^5.12.3",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "react-native-sqlite-storage": "^6.0.1"
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
